// Copyright 2020 WeDPR Lab Project Authors. Licensed under Apache-2.0.

syntax = "proto3";

package com.webank.wedpr.vcl.proto;
option java_package = "com.webank.wedpr.vcl.proto";
option java_multiple_files = true;

// Encoded data to represent a owner secret.
message EncodedOwnerSecret {
  int64 credit_value = 1;
  bytes secret_blinding = 2;
}

// Encoded data to represent a confidential credit.
message EncodedConfidentialCredit {
  bytes point = 1;
}

// Return data to FFI interface used by VCL.
message VclResult {
  string credit = 1;
  string secret = 2;
  string proof = 3;
}

// Verify Multi proof to FFI interface used by VCL.
message BatchProof {
  repeated string c1_credit = 1;
  repeated string c2_credit = 2;
  repeated string c3_credit = 3;
  repeated string proof = 4;
}